k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: gcr.io/hong-kong-493003/python-app:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
