k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  labels:
    app: python-app
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
